--- a/tutor/index.html
+++ b/tutor/index.html
@@ -98,7 +98,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/1 (1).jpg" alt="img"></div>
+                        <div class="ci-thumb set-bg"><img src="./image/1 (1).jpg" alt="img"></div>
                         <div class="ci-text">
                             <h5>Computer Science</h5>
 
@@ -109,7 +109,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/2.jpg" alt=""></div>
+                        <div class="ci-thumb set-bg"><img src="./image/2.jpg" alt=""></div>
                         <div class="ci-text">
                             <h5>Web Development</h5>
 
@@ -120,7 +120,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/3.jpg" alt=""></div>
+                        <div class="ci-thumb set-bg"><img src="./image/3.jpg" alt=""></div>
                         <div class="ci-text">
                             <h5>Programming Tutorials</h5>
 
@@ -131,7 +131,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/4.jpg" alt=""></div>
+                        <div class="ci-thumb set-bg"><img src="./image/4.jpg" alt=""></div>
                         <div class="ci-text">
                             <h5>Java technologies</h5>
 
@@ -142,7 +142,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/5.jpg" alt=""></div>
+                        <div class="ci-thumb set-bg"><img src="./image/5.jpg" alt=""></div>
                         <div class="ci-text">
                             <h5>Mobile Development</h5>
 
@@ -153,7 +153,7 @@
                 <!-- categorie -->
                 <div class="col-lg-4 col-md-6">
                     <div class="categorie-item">
-                        <div class="ci-thumb set-bg"><img src="/image/6.jpg" alt=""></div>
+                        <div class="ci-thumb set-bg"><img src="./image/6.jpg" alt=""></div>
                         <div class="ci-text">
                             <h5>DataBase tutorials</h5>
 
