--- a/tutor/courses.html
+++ b/tutor/courses.html
@@ -23,7 +23,7 @@
 
     <style>
         #background1 {
-            background-image: url(/image/bg1.jpg);
+            background-image: url(./image/bg1.jpg);
         }
     </style>
 
@@ -263,7 +263,7 @@
                         Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | Made by TutorPoint by <a>TutorPoint</a>
+                        </script> All rights reserved | Made by Bikash Shaw by <a>Bikash Shaw</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
 
