--- a/tutor/blog.html
+++ b/tutor/blog.html
@@ -67,7 +67,7 @@
 
 
     <!-- Page info -->
-    <div class="page-info-section " style="background-image: url(/image/bg3.jpg);">
+    <div class="page-info-section " style="background-image: url(./image/bg3.jpg);">
         <div class="container">
             <div class="site-breadcrumb">
                 <a href="#">Home</a>
@@ -108,7 +108,7 @@
                 <div class="col-lg-9">
                     <!-- blog post -->
                     <div class="blog-post">
-                        <img src="/image/bbg1.jpg" alt="">
+                        <img src="./image/bbg1.jpg" alt="">
                         <h3>How to Look for Online Courses</h3>
                         <div class="blog-metas">
                             <div class="blog-meta author">
@@ -130,7 +130,7 @@
                     </div>
                     <!-- blog post -->
                     <div class="blog-post">
-                        <img src="/image/bbg2.jpg" alt="">
+                        <img src="./image/bbg2.jpg" alt="">
                         <h3>5 Steps To take certified Course</h3>
                         <div class="blog-metas">
                             <div class="blog-meta author">
@@ -152,7 +152,7 @@
                     </div>
                     <!-- blog post -->
                     <div class="blog-post">
-                        <img src="/image/bbg3.jpg" alt="">
+                        <img src="./image/bbg3.jpg" alt="">
                         <h3>Why choose an online course?</h3>
                         <div class="blog-metas">
                             <div class="blog-meta author">
@@ -253,8 +253,8 @@
                         Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | Made by TutorPoint by
-                        <a href="#">TutorPoint</a>
+                        </script> All rights reserved | Made by Bikash Shaw by
+                        <a href="#">Bikash Shaw</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
                     </div>
