--- a/tutor/contact.html
+++ b/tutor/contact.html
@@ -65,7 +65,7 @@
 
 
     <!-- Page info -->
-    <div class="page-info-section " style="background-image: url(/image/bg4.jpg);">
+    <div class="page-info-section " style="background-image: url(./image/bg4.jpg);">
         <div class="container">
             <div class="site-breadcrumb">
                 <a href="#">Home</a>
@@ -179,8 +179,8 @@
                         Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | Made by TutorPoint by
-                        <a href="#">TutorPoint</a>
+                        </script> All rights reserved | Made by Bikash Shaw
+                        <a href="#">Bikash Shaw</a>
 
 
                     </div>
